src/test/ui/underscore-lifetime/dyn-trait-underscore-in-struct.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/dyn-trait-underscore-in-struct.rs:9:24
   |
LL |     x: Box<dyn Debug + '_>,
   |                        ^^ expected lifetime parameter

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/dyn-trait-underscore-in-struct.rs:9:12
   |
LL |     x: Box<dyn Debug + '_>,
   |            ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
